# prime-rl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .skyignore  .tmuxinator.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSIDERATA.md  CONSIDERATIONS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-amd  Dockerfile.cuda  Dockerfile.cuda.mx-v2  Dockerfile.cuda.runtime  Dockerfile.dynamo  Dockerfile.nvfp4-e2e  Dockerfile.nvfp4-e2e-overlay  Dockerfile.nvfp4-e2e-overlay.dockerignore  ECHO_FILTER_DESIGN.md  HANDOVER.md  ITERATIVE_TRAINING_GUIDE.md  MTP_ROOT_CAUSE_ISOLATION.md  PLAN.md  PR_NOTES.md  README.md  RL_TRAINING_SETUP.md  RUN_ABLATION_SUMMARY.md  RUN_NOTES.md  TOPOLOGY_DEFERRED_WORK.md  a.ipynb  b.ipynb  bench.py  branch-sample-dedup-bug.md  c.ipynb  command.txt  docker-entrypoint.sh  error.txt  generate_trial_weights.py  (+63 more)
configs/: README.md  platform_e2e.toml  pyproject.toml
configs/acereason_math/: stage1.toml  stage2.toml
configs/agent-traces/: base.toml
configs/alphabet_sort/: rl.sh  rl.toml  rl_with_server.toml  sft_distill_hard_qwen4b_lora_prime_teacher.toml  start-rl.sh  v1.toml
configs/arc_1d_multistrategy/: rl.toml
configs/arc_codegen/: rl.toml
configs/arc_multistrategy/: rl.toml
configs/arc_multistrategy_vision/: rl.toml
configs/arc_synthetic_multistrategy/: rl.toml
configs/arc_synthetic_multistrategy_vision/: rl.toml
configs/articraft/: rl_articraft_kaola.toml
configs/baselines/: gpqa_openended_gemma4_local.toml  gpqa_science_prompt_pack.yaml
configs/behavior_learning/: README.md  rl_qwen3_4b_rlm_baseline.toml  rl_qwen3_4b_rlm_behavior_shaping.toml  rl_qwen3_4b_rlm_prompt.toml  rl_qwen3_4b_rlm_prompt_behavior_shaping.toml
configs/benchmark/: per_message_tokenization.toml
configs/bias_detector/: rl.toml
configs/bias_detector_v10/: rl.toml
configs/bias_detector_v100/: rl.toml
configs/bias_detector_v101/: rl.toml
configs/bias_detector_v102/: rl.toml
configs/bias_detector_v103/: rl.toml
configs/bias_detector_v104/: rl.toml
configs/bias_detector_v105/: rl.toml
configs/bias_detector_v106/: rl.toml
configs/bias_detector_v107/: rl.toml
configs/bias_detector_v108/: rl.toml
configs/bias_detector_v109/: rl.toml
configs/bias_detector_v11/: rl.toml
configs/bias_detector_v12/: rl.toml
configs/bias_detector_v13/: rl.toml
configs/bias_detector_v14/: rl.toml
configs/bias_detector_v15/: rl.toml
configs/bias_detector_v16/: rl.toml
configs/bias_detector_v17/: rl.toml
configs/bias_detector_v18/: rl.toml
configs/bias_detector_v19/: rl.toml
configs/bias_detector_v2/: rl.toml
configs/bias_detector_v20/: rl.toml
configs/bias_detector_v21/: rl.toml
configs/bias_detector_v22/: rl.toml
configs/bias_detector_v23/: rl.toml
configs/bias_detector_v24/: rl.toml
configs/bias_detector_v25/: rl.toml
configs/bias_detector_v26/: rl.toml
configs/bias_detector_v27/: rl.toml
configs/bias_detector_v28/: rl.toml
configs/bias_detector_v29/: rl.toml
configs/bias_detector_v3/: rl.toml
configs/bias_detector_v30/: rl.toml
configs/bias_detector_v31/: rl.toml
configs/bias_detector_v32/: rl.toml
configs/bias_detector_v33/: rl.toml
configs/bias_detector_v34/: rl.toml
configs/bias_detector_v35/: rl.toml
configs/bias_detector_v36/: rl.toml
configs/bias_detector_v37/: rl.toml
configs/bias_detector_v38/: rl.toml
configs/bias_detector_v39/: rl.toml
configs/bias_detector_v4/: rl.toml
configs/bias_detector_v40/: rl.toml
configs/bias_detector_v41/: rl.toml
configs/bias_detector_v42/: rl.toml
configs/bias_detector_v43/: rl.toml
configs/bias_detector_v44/: rl.toml
configs/bias_detector_v45/: rl.toml
configs/bias_detector_v46/: rl.toml
configs/bias_detector_v47/: rl.toml
configs/bias_detector_v48/: rl.toml
configs/bias_detector_v49/: rl.toml
configs/bias_detector_v5/: rl.toml
configs/bias_detector_v50/: rl.toml
configs/bias_detector_v51/: rl.toml
configs/bias_detector_v52/: rl.toml
configs/bias_detector_v53/: rl.toml
configs/bias_detector_v54/: rl.toml
configs/bias_detector_v55/: rl.toml
configs/bias_detector_v56/: rl.toml
configs/bias_detector_v57/: rl.toml
configs/bias_detector_v58/: rl.toml
configs/bias_detector_v59/: rl.toml
configs/bias_detector_v6/: rl.toml
configs/bias_detector_v60/: rl.toml
configs/bias_detector_v61/: rl.toml
configs/bias_detector_v62/: rl.toml
configs/bias_detector_v63/: rl.toml
configs/bias_detector_v64/: rl.toml
configs/bias_detector_v65/: rl.toml
configs/bias_detector_v67/: rl.toml
configs/bias_detector_v69/: rl.toml
configs/bias_detector_v7/: rl.toml
configs/bias_detector_v70/: rl.toml
configs/bias_detector_v71/: rl.toml
configs/bias_detector_v74/: rl.toml
configs/bias_detector_v75/: rl.toml
configs/bias_detector_v76a/: rl.toml
configs/bias_detector_v76b/: rl.toml
configs/bias_detector_v76c/: rl.toml
configs/bias_detector_v77/: rl.toml
configs/bias_detector_v78/: rl.toml
configs/bias_detector_v79/: rl.toml
configs/bias_detector_v8/: rl.toml
configs/bias_detector_v80/: rl.toml
configs/bias_detector_v81/: rl.toml
configs/bias_detector_v82/: rl.toml
configs/bias_detector_v83/: rl.toml
configs/bias_detector_v84/: rl.toml
configs/bias_detector_v85/: rl.toml
configs/bias_detector_v86/: rl.toml
configs/bias_detector_v87/: rl.toml
configs/bias_detector_v88/: rl.toml
configs/bias_detector_v89/: rl.toml
configs/bias_detector_v9/: rl.toml
configs/bias_detector_v90/: rl.toml
configs/bias_detector_v91/: rl.toml
configs/bias_detector_v92/: rl.toml
configs/bias_detector_v93/: rl.toml
configs/bias_detector_v94/: rl.toml
configs/bias_detector_v95/: rl.toml
configs/bias_detector_v96/: rl.toml
configs/bias_detector_v97/: rl.toml
configs/bias_detector_v98/: rl.toml
configs/bias_detector_v99/: rl.toml
configs/calibration/: README.md  gpqa_debate_12step_bs512_g32_1t7i_kvsmoke.toml  gpqa_debate_12step_bs512_g32_2t6i_kvsmoke.toml  gpqa_debate_5step.toml  gpqa_debate_5step_bs512_g16.toml  gpqa_debate_6step_bs512_g32_1t7i_kvsmoke_seq192_u95.toml  gpqa_single_shot_eval_after_ckpt.toml  (+16 more)
(+3242 files in other folders)
