[project]
name = "prime-rl"
version = "0.4.0"
description = "Async RL Training at Scale"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "prime-rl-configs",
    "beartype>=0.21.0",
    "datasets>=4.0.0",
    "jaxtyping>=0.3.2",
    "liger-kernel>=0.5.10",
    "loguru>=0.7.3",
    "pyarrow>=21.0.0",
    "numpy>=2.2.6",
    "torch>=2.9.0",
    "torchvision",
    "torchaudio",
    "torchdata>=0.11.0",
    "transformers",
    "vllm>=0.20.2",
    "wandb>=0.26.1",
    "ring-flash-attn>=0.1.8",
    "prime>=0.6.4",
    "pyzmq>=27.1.0",
    "aiolimiter>=1.2.1",
    "tenacity>=8.2.0",
    "openai>=1.106.1",
    "rich>=14.0.0",
    "setproctitle>=1.3.0",
    "uvloop>=0.21.0",
    "torchtitan",
    "verifiers",
    "renderers",
    "dion",
    "tilelang>=0.1.8",
    "flash-linear-attention",
    "nvidia-ml-py>=12.575.51",
]

[project.scripts]
rl = "prime_rl.entrypoints.rl:main"
sft = "prime_rl.entrypoints.sft:main"
inference = "prime_rl.entrypoints.inference:main"
trainer = "prime_rl.trainer.rl.train:main"
orchestrator = "prime_rl.orchestrator.orchestrator:main"
env-server = "prime_rl.orchestrator.env_server.env_server:main"

[project.entry-points."vllm.general_plugins"]
prime_rl = "prime_rl.inference.patches:transformers_v5_compat"

[project.optional-dependencies]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu128torch2.11-cp312-cp312-linux_x86_64.whl ; platform_machine == 'x86_64'",
]
flash-attn-3 = ["flash_attn_3"]

flash-attn-cute = [
    "flash-attn-4",
]
envs = [
    # from verifiers/environments/*
    "alphabet-sort",
    "browser-cua-example",
    "browser-dom-example",
    "continuation-quality",
    "doublecheck",
    "dspy-flights",
    "dspy-rlm",
    "gsm8k",
    "hello-group-reward-v1",
    "hello-mcp-harbor",
    "hello-parallel-sandbox-v1",
    "hello-rlm-v1",
    "hello-self-judge-v1",
    "hello-subagent-v1",
    "langchain-deep-agents-wikispeedia",
    "math-group",
    "math-python",
    "mcp-search-env",
    "mmmu",
    "nested-harness-v1",
    "openai-agents-env",
    "opencode-harbor",
    "reasoning-gym-env",
    "reverse-text",
    "rlm-swe-v1",
    "self-reward",
    "sentence-repeater",
    "terminus-harbor",
    "tool-test",
    "toxicity-explanation",
    "wiki-search",
    "wordle",
    # from research-environments/environments/*
    "aime2024",
    "aime2025",
    "aime2026",
    "apex-shortlist",
    "bfcl-v3",
    "browsecomp",
    "clbench",
    "code-env",
    "color-codeword",
    "ddbc",
    "ddbc-rlm",
    "deepdive",
    "deepdive-rlm",
    "frontierscience",
    "general-agent",
    "gpqa",
    "graphwalks",
    "graphwalks-rlm",
    "harbor",
    "hle",
    "ifbench",
    "ifeval",
    "if-summarize-judge",
    "livecodebench",
    "logic-env",
    "longbenchpro-rlm",
    "longcot-rlm",
    "math500",
    "math-env",
    "math-env-rlm",
    "mcp-atlas",
    "mini-swe-agent-plus",
    "mini-swe-agent-plus-rlm",
    "mmlu-pro",
    "mrcr-v2-rlm",
    "needle-in-haystack-rlm",
    "nl2repobench",
    "oolong-rlm",
    "opencode-cp",
    "opencode-deepdive",
    "opencode-lean",
    "opencode-math",
    "opencode-science",
    "opencode-swe",
    "passthrough",
    "patterned-needle-in-haystack",
    "patterned-needle-in-haystack-rlm",
    "pinchbench",
    "rlm-browsecomp",
    "rlm-deepdive",
    "rlm-graphwalks",
    "rlm-lean",
    "rlm-longcot",
    "rlm-math",
    "rlm-mrcr-v2",
    "rlm-oolong",
    "rlm-science",
    "rlm-secrets",
    "rlm-swe",
    "science-env",
    "simpleqa",
    "simpleqa-verified",
    "swe",
    "unscramble",
    "verbatim-copy",
    "verbatim-copy-rlm",
    "wikispeedia",
]
disagg = [
    "deep-ep ; platform_machine == 'x86_64'",
    "deep-gemm ; platform_machine == 'x86_64'",
    "nixl",
    "nixl-cu12 ; platform_machine == 'x86_64'",
    "vllm-router ; platform_machine == 'x86_64'",
]
gpt-oss = [
    "kernels",
]
quack = [
    "quack-kernels>=0.3.3",
]
all = [
    "prime-rl[flash-attn]",
    "prime-rl[disagg]",
    "prime-rl[quack]",
    "prime-rl[flash-attn-3]",
    "prime-rl[flash-attn-cute]",
]

[dependency-groups]
mamba-ssm = [
    "mamba-ssm>=2.3.0",
]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.uv.workspace]
members = [
    "packages/prime-rl-configs",
    "packages/verifiers",
    "packages/verifiers/environments/*",
    "packages/renderers",
    "packages/research-environments/environments/*",
]
# Env packages excluded from the workspace:
# - verifiers/environments/bfcl_v3: collides with research-environments/environments/bfcl_v3 (kept)
# - research-environments/environments/clbench_rlm: pins verifiers to a non-workspace git URL
# - research-environments/environments/terminal_bench_2: pins verifiers to a non-workspace git URL
exclude = [
    "packages/verifiers/environments/bfcl_v3",
    "packages/research-environments/environments/clbench_rlm",
    "packages/research-environments/environments/terminal_bench_2",
    # tau2 package has three incompatible forks across these envs — pick none for now
    "packages/verifiers/environments/tau2_bench_v1",
    "packages/research-environments/environments/tau2_bench",
    "packages/research-environments/environments/tau2_synth",
    "packages/research-environments/environments/tau3_bench",
    "packages/research-environments/environments/tau3_bench_rlm",
    # gem-wordle pins nltk==3.9.1 (via gem-llm) but wordle requires nltk>=3.9.2
    "packages/verifiers/environments/gem_wordle",
    # scicode-core's google-generativeai pins protobuf incompatibly with mcp-atlas/opencode-deepdive
    "packages/research-environments/environments/scicode",
    # verifiers[openenv] requires openenv-core>=0.3.0 but only <=0.2.3 is available
    "packages/verifiers/environments/openenv_echo",
    "packages/verifiers/environments/openenv_textarena",
]

[tool.uv]
exclude-newer = "7 days"
preview = true
no-build-isolation-package = ["flash-attn"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
# Override torch's pinned cuDNN to fix Conv3d performance regression (torch 2.9 + cuDNN 9.8-9.14)
# See: https://github.com/pytorch/pytorch/issues/166122
override-dependencies = [
    "nvidia-cudnn-cu12>=9.15",
    "nvidia-cutlass-dsl>=4.4.1",
    "transformers>=5.1.0.dev0",
    # verifiers[rl] pins torch<2.9; prime-rl needs torch>=2.9. Force our version.
    "torch>=2.9.0",
    # verifiers[openenv] requires openenv-core>=0.3.0 (not yet published); allow current PyPI.
    "openenv-core",
]

[tool.uv.exclude-newer-package]
# we want latest vllm, remove next patch
vllm = false
flash_attn_3 = false
# PrimeIntellect-published on PyPI (trusted publisher)
prime = false
prime-sandboxes = false
prime-tunnel = false
prime-evals = false
# Trusted git/URL sources pinned by rev or wheel URL (defensive: belt-and-suspenders)
vllm-router = false
dion = false
pydantic-config = false
deep-ep = false
deep-gemm = false
nixl-cu12 = false

[tool.uv.sources]
prime-rl-configs = { workspace = true }
verifiers = { workspace = true }
renderers = { workspace = true }
# Env packages from verifiers/environments/* and research-environments/environments/*
alphabet-sort = { workspace = true }
browser-cua-example = { workspace = true }
browser-dom-example = { workspace = true }
continuation-quality = { workspace = true }
doublecheck = { workspace = true }
dspy-flights = { workspace = true }
dspy-rlm = { workspace = true }
gsm8k = { workspace = true }
hello-group-reward-v1 = { workspace = true }
hello-mcp-harbor = { workspace = true }
hello-parallel-sandbox-v1 = { workspace = true }
hello-rlm-v1 = { workspace = true }
hello-self-judge-v1 = { workspace = true }
hello-subagent-v1 = { workspace = true }
langchain-deep-agents-wikispeedia = { workspace = true }
math-group = { workspace = true }
math-python = { workspace = true }
mcp-search-env = { workspace = true }
mmmu = { workspace = true }
nested-harness-v1 = { workspace = true }
openai-agents-env = { workspace = true }
opencode-harbor = { workspace = true }
reasoning-gym-env = { workspace = true }
reverse-text = { workspace = true }
rlm-swe-v1 = { workspace = true }
self-reward = { workspace = true }
sentence-repeater = { workspace = true }
terminus-harbor = { workspace = true }
tool-test = { workspace = true }
toxicity-explanation = { workspace = true }
wiki-search = { workspace = true }
wordle = { workspace = true }
aime2024 = { workspace = true }
aime2025 = { workspace = true }
aime2026 = { workspace = true }
apex-shortlist = { workspace = true }
bfcl-v3 = { workspace = true }
browsecomp = { workspace = true }
clbench = { workspace = true }
code-env = { workspace = true }
color-codeword = { workspace = true }
ddbc = { workspace = true }
ddbc-rlm = { workspace = true }
deepdive = { workspace = true }
deepdive-rlm = { workspace = true }
frontierscience = { workspace = true }
general-agent = { workspace = true }
gpqa = { workspace = true }
graphwalks = { workspace = true }
graphwalks-rlm = { workspace = true }
harbor = { workspace = true }
hle = { workspace = true }
ifbench = { workspace = true }
ifeval = { workspace = true }
if-summarize-judge = { workspace = true }
livecodebench = { workspace = true }
logic-env = { workspace = true }
longbenchpro-rlm = { workspace = true }
longcot-rlm = { workspace = true }
math500 = { workspace = true }
math-env = { workspace = true }
math-env-rlm = { workspace = true }
mcp-atlas = { workspace = true }
mini-swe-agent-plus = { workspace = true }
mini-swe-agent-plus-rlm = { workspace = true }
mmlu-pro = { workspace = true }
mrcr-v2-rlm = { workspace = true }
needle-in-haystack-rlm = { workspace = true }
nl2repobench = { workspace = true }
oolong-rlm = { workspace = true }
opencode-cp = { workspace = true }
opencode-deepdive = { workspace = true }
opencode-lean = { workspace = true }
opencode-math = { workspace = true }
opencode-science = { workspace = true }
opencode-swe = { workspace = true }
passthrough = { workspace = true }
patterned-needle-in-haystack = { workspace = true }
patterned-needle-in-haystack-rlm = { workspace = true }
pinchbench = { workspace = true }
rlm-browsecomp = { workspace = true }
rlm-deepdive = { workspace = true }
rlm-graphwalks = { workspace = true }
rlm-lean = { workspace = true }
rlm-longcot = { workspace = true }
rlm-math = { workspace = true }
rlm-mrcr-v2 = { workspace = true }
rlm-oolong = { workspace = true }
rlm-science = { workspace = true }
rlm-secrets = { workspace = true }
rlm-swe = { workspace = true }
science-env = { workspace = true }
simpleqa = { workspace = true }
simpleqa-verified = { workspace = true }
swe = { workspace = true }
unscramble = { workspace = true }
verbatim-copy = { workspace = true }
verbatim-copy-rlm = { workspace = true }
wikispeedia = { workspace = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchtitan = { git = "https://github.com/pytorch/torchtitan", rev = "a1fdd7e" }
dion = { git = "https://github.com/samsja/dion.git", rev = "d891eeb" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "c1c3424" }
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "flash_attn/cute", rev = "96bd151" }
pydantic-config = { git = "https://github.com/samsja/pydantic_config.git", branch = "main" }
vllm-router = { url = "https://github.com/PrimeIntellect-ai/router/releases/download/v0.1.22/vllm_router-0.1.22-cp38-abi3-manylinux_2_28_x86_64.whl" }
vllm = [
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.20.2/vllm-0.20.2+cu129-cp38-abi3-manylinux_2_31_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.20.2/vllm-0.20.2+cu129-cp38-abi3-manylinux_2_31_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]
deep-ep = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_ep-1.2.1+29d31c0-cp312-cp312-linux_x86_64.whl" }
deep-gemm = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_gemm-2.5.0+891d57b-cp312-cp312-linux_x86_64.whl" }
nixl-cu12 = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/nixl_cu12-0.10.1-cp312-cp312-linux_x86_64.whl" }
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention" }
flash_attn_3 = { index = "pytorch-cu128-test" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
flash-attn-3 = [{ requirement = "torch", match-runtime = true }]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128-test"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff.lint.isort]
# `prime_rl` is split across two workspace wheels (prime-rl + prime-rl-configs).
# Without this, ruff classifies prime_rl.configs.* as third-party because it
# doesn't live under src/.
known-first-party = ["prime_rl"]

[tool.ruff]
line-length = 120
# Submodules have their own style; prime-rl's ruff config should not apply to them.
extend-exclude = ["packages/verifiers", "packages/renderers", "packages/research-environments"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_rl"]

[tool.hatch.metadata]
allow-direct-references = true
