[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flash_attn"
version = "2.8.3"
description = "ARM64 stub — replaces real flash_attn on GB200 QEMU builds that skip the 3-5 hr compile."
requires-python = ">=3.9"

[tool.setuptools]
packages = ["flash_attn"]
