[project]
name = "articraft-env"
version = "0.0.1"
description = "Articraft multi-turn RL environment for prime-rl (verifiers package)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "verifiers>=0.1.10",
    "datasets>=4.0.0",
    "pydantic>=2.0.0",
    # articraft SDK + geometry deps are installed separately via scripts/envs/articraft.sh
    # (--no-deps to avoid pulling cadquery/openai/anthropic)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["articraft_env"]
