[project]
name = "blendergym"
version = "0.0.1"
description = "BlenderGym multimodal RL environment for prime-rl (verifiers package)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "verifiers>=0.1.10",
    "pillow>=10.0.0",
    "datasets>=4.0.0",
    "open_clip_torch>=2.24.0",
    # torch is provided by the parent prime-rl venv; pin a floor so standalone
    # installs of this package still pick up a CLIP-compatible build.
    "torch>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blendergym"]
