[project]
name = "replay-v1"
version = "0.1.0"
description = "Replay-buffer taskset: continue/recheck/judge tasks derived from saved prime-rl rollouts."
requires-python = ">=3.10"
dependencies = ["verifiers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["replay_v1"]
