[project]
name = "webvoyager-no-anti-bot"
version = "0.1.2"
description = "WebVoyager browser benchmark with filtered dataset (600 tasks from sites without anti-bot protection)"
tags = ["browser", "browserbase", "webvoyager", "eval", "benchmark", "no-anti-bot"]
requires-python = ">=3.10"
dependencies = [
    "verifiers[browser]>=0.1.8",
]

#[tool.uv.sources]
#verifiers = { git = "https://github.com/primeintellect-ai/verifiers", branch = "cdreetz/fix-bb-sandboxes" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["webvoyager_no_anti_bot.py", "pyproject.toml", "datasets/"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 1
