[project]
name = "physics-rlvr-data-pipeline"
version = "0.1.0"
description = "Physics RLVR PDF curation pipeline with Gemini OCR extraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "antlr4-python3-runtime==4.11.*",
    "pillow",
    "pymupdf",
    "safetensors",
    "sympy",
    "torch",
    "torchvision",
    "transformers",
]

[project.scripts]
physics-rlvr-data = "physics_rlvr_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["physics_rlvr_data"]
