[project]
name = "no-inference-env"
version = "0.1.0"
description = "Deterministic no-inference trajectory environment for PRIME-RL orchestrator memory debugging."
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "numpy",
    "pybase64",
    "verifiers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["no_inference_env.py"]
