[project]
name = "memento-boundary-env"
version = "0.1.0"
description = "Deterministic Verifiers fixture with Memento boundary-token history."
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "verifiers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memento_boundary_env"]
